create NavBar and Breadcrumbs components; code reafctoring; add tablet & mobile styles for NavBar and Breadcrumbs; set id of main container to humanit-shop.

--- a/src/scss/utility/Variables.scss
+++ b/src/scss/utility/Variables.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 10:11:40
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-11 12:03:06
+* @Last Modified time: 2021-08-11 22:15:08
 */
 
 /*
@@ -24,5 +24,6 @@ $mainPalette: (
     dark: #287194,
     light: #0F435B
   ),
-  white: #ffffff
+  white: #ffffff,
+  gray: #5C5C5C
 );
