--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 10:08:26
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-11 13:44:09
+* @Last Modified time: 2021-08-11 23:18:33
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
@@ -13,3 +13,15 @@
 
 @import "components/Header";
 @import "components/Footer";
+@import "components/NavBar";
+@import "components/Breadcrumbs";
+
+body {
+  overflow-y: hidden;
+}
+
+#humanit-shop {
+  min-height: 100vh;
+  overflow-y: auto;
+  position: relative;
+}
