create Title, Product components; rename Product page in ProductCard.

--- a/src/scss/components/Footer.scss
+++ b/src/scss/components/Footer.scss
@@ -2,13 +2,13 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 11:09:48
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-11 21:32:15
+* @Last Modified time: 2021-08-12 00:25:57
 */
 
 .footer-container {
-  position: absolute;
+  /*position: absolute;
   bottom: 0;
-  left: 0;
+  left: 0;*/
   display: flex;
   justify-content: space-around;
   width: 100%;
