--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 10:08:26
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-11 23:18:33
+* @Last Modified time: 2021-08-12 02:36:59
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
@@ -11,17 +11,39 @@
 @import "utility/Mixins";
 @import "utility/Reset";
 
-@import "components/Header";
-@import "components/Footer";
-@import "components/NavBar";
 @import "components/Breadcrumbs";
+@import "components/Footer";
+@import "components/Header";
+@import "components/NavBar";
+@import "components/Product";
+@import "components/Title";
 
 body {
-  overflow-y: hidden;
+  /*overflow-y: hidden;*/
+  -webkit-font-smoothing: antialiased;
 }
 
 #humanit-shop {
   min-height: 100vh;
   overflow-y: auto;
   position: relative;
+}
+
+.main-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 80px;
+
+  .main {
+    width: 60%;
+
+    @include tablet {
+      width: 87.3%;
+    }
+  }
+}
+
+.container-shadow {
+  box-shadow: 0px 2px 7px 2px rgba(19, 53, 60, 0.15);
 }
