--- a/src/scss/components/NavBar.scss
+++ b/src/scss/components/NavBar.scss
@@ -2,70 +2,59 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 22:01:47
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-11 23:26:08
+* @Last Modified time: 2021-08-12 00:54:44
 */
 
 .navbar-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-  padding: 30px 0;
+  padding: 30px 0 70px;
 
-  .navbar {
+  @include mobile {
+    display: none;
+  }
+
+  .navbar__search-wrapper {}
+
+  .navbar__search {
+    position: relative;
+    width: -webkit-fill-available;
+    margin: 0 14% 0 6.4%;
+
+    .navbar__search__input {
+      width: 100%;
+      padding: 13px 20px;
+      font-size: 12px;
+      line-height: 14px;
+      border: none;
+    }
+
+    .navbar__search__icon {
+      position: absolute;
+      top: 50%;
+      right: -20px;
+      transform: translateY(-50%);
+      color: map-get($mainPalette, gray);
+    }
+  }
+
+  .navbar__delivery {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    width: 60%;
 
-    @include tablet {
-      width: 87.3%;
+    .navbar__delivery__title {
+      margin-right: 10px;
+      font-size: 12px;
+      line-height: 14px;
+      white-space: nowrap;
+      color: map-get($mainPalette, gray);
     }
 
-    @include mobile {
-      display: none;
-    }
-
-    .navbar__search-wrapper {}
-
-    .navbar__search {
-      position: relative;
-      width: -webkit-fill-available;
-      margin: 0 14% 0 6.4%;
-
-      .navbar__search__input {
-        width: 100%;
-        padding: 13px 20px;
-        font-size: 12px;
-        line-height: 14px;
-        border: none;
-        box-shadow: 0px 2px 7px 2px rgba(19, 53, 60, 0.15);
-      }
-
-      .navbar__search__icon {
-        position: absolute;
-        top: 50%;
-        right: -20px;
-        transform: translateY(-50%);
-        color: map-get($mainPalette, gray);
-      }
-    }
-
-    .navbar__delivery {
-      display: flex;
-      align-items: center;
-
-      .navbar__delivery__title {
-        margin-right: 10px;
-        font-size: 12px;
-        line-height: 14px;
-        white-space: nowrap;
-        color: map-get($mainPalette, gray);
-      }
-
-      .navbar__delivery__icon {
-        transform: scaleX(-1);
-        color: map-get(map-get($mainPalette, blue), dark);
-      }
+    .navbar__delivery__icon {
+      transform: scaleX(-1);
+      color: map-get(map-get($mainPalette, blue), dark);
     }
   }
 }
