--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 10:08:26
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-12 02:36:59
+* @Last Modified time: 2021-08-12 04:13:34
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
@@ -11,7 +11,9 @@
 @import "utility/Mixins";
 @import "utility/Reset";
 
+@import "components/Basket";
 @import "components/Breadcrumbs";
+@import "components/Details";
 @import "components/Footer";
 @import "components/Header";
 @import "components/NavBar";
