--- a/src/scss/components/Product.scss
+++ b/src/scss/components/Product.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-12 00:38:12
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-12 03:16:01
+* @Last Modified time: 2021-08-12 04:28:12
 */
 
 .product-wrapper {
@@ -245,11 +245,13 @@
           justify-content: space-between;
           align-items: center;
 
-          .product__price__checkbox-row-content__item {
-            display: flex;            
+          .checkbox {
+            display: flex;
             align-items: center;
 
             label {
+              display: flex;
+              align-items: center;
               font-size: 16px;
               line-height: 19px;
               color: map-get($mainPalette, gray);
