--- a/src/scss/components/Product.scss
+++ b/src/scss/components/Product.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-12 00:38:12
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-12 04:28:12
+* @Last Modified time: 2021-08-12 18:59:09
 */
 
 .product-wrapper {
@@ -266,30 +266,8 @@
       display: flex;
       justify-content: space-between;
 
-      .product__price__action-btn {
+      .button {
         width: calc((100% / 2) - 10px);
-        padding: 11px 0 10px;
-        font-size: 16px;
-        font-weight: 500;
-        line-height: 19px;
-        text-transform: uppercase;
-        border: 2px solid map-get(map-get($mainPalette, blue), dark);
-        background-color: map-get($mainPalette, white);
-        color: map-get(map-get($mainPalette, blue), dark);
-        cursor: pointer;
-
-        &.product__price__action-btn--inverse,
-        &:hover {
-          background-color: map-get(map-get($mainPalette, blue), dark);
-          color: map-get($mainPalette, white);
-        }
-
-        &.product__price__action-btn--inverse {
-          &:hover {
-            background-color: map-get($mainPalette, white);
-            color: map-get(map-get($mainPalette, blue), dark);
-          }
-        }
 
         &:first-child {
           margin-right: 10px;
