--- a/src/scss/components/Details.scss
+++ b/src/scss/components/Details.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-12 04:13:06
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-12 19:30:49
+* @Last Modified time: 2021-08-12 19:43:22
 */
 
 .details-container {
@@ -59,6 +59,14 @@
     &:not(:last-child) {
       border-bottom: 1px solid  rgba(0, 0, 0, 0.3);
       padding-bottom: 25px;
+    }
+  }
+
+  .checkbox {
+    margin-top: 30px;
+
+    input {
+      margin-right: 23px;
     }
   }
 }
