--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 10:08:26
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-12 18:43:06
+* @Last Modified time: 2021-08-12 19:46:42
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
@@ -43,6 +43,10 @@ body {
 
     @include tablet {
       width: 87.3%;
+    }
+
+    @include mobile {
+      width: 91.7%;
     }
   }
 }
