--- a/src/scss/components/Details.scss
+++ b/src/scss/components/Details.scss
@@ -2,11 +2,15 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-12 04:13:06
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-12 19:43:22
+* @Last Modified time: 2021-08-12 20:05:17
 */
 
 .details-container {
   padding: 5px 30px 30px;
+
+  @include mobile {
+    padding: 5px 25px 25px;    
+  }
 
   .details {
     .details__title {
@@ -59,6 +63,10 @@
     &:not(:last-child) {
       border-bottom: 1px solid  rgba(0, 0, 0, 0.3);
       padding-bottom: 25px;
+
+      @include mobile {
+        padding-bottom: 20px;
+      }
     }
   }
 
@@ -67,6 +75,10 @@
 
     input {
       margin-right: 23px;
+
+      @include mobile {
+        margin-right: 20px;
+      }
     }
   }
 }
