--- a/src/scss/components/Title.scss
+++ b/src/scss/components/Title.scss
@@ -2,11 +2,15 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 23:28:52
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-11 23:41:39
+* @Last Modified time: 2021-08-12 19:47:56
 */
 
 .title-container {
   margin: 30px 0;
+
+  @include mobile {
+    margin-top: 60px;
+  }
   
   .title-container__name {    
     font-size: 24px;
