--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 10:08:26
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-12 19:46:42
+* @Last Modified time: 2021-08-13 10:54:39
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
@@ -20,6 +20,10 @@
 @import "components/NavBar";
 @import "components/Product";
 @import "components/Title";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   /*overflow-y: hidden;*/
