--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 10:09:23
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-11 21:47:30
+* @Last Modified time: 2021-08-13 10:55:44
 */
 
 .header-container {
@@ -150,6 +150,7 @@
       .header__toggle-menu-items {
         position: absolute;
         bottom: -160px;
+        z-index: 2;
         right: 60px;
         width: 100%;
         padding: 12px;
