--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,7 +2,7 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 10:08:26
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-13 13:08:58
+* @Last Modified time: 2021-08-13 13:50:24
 */
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
@@ -25,23 +25,24 @@
   box-sizing: border-box;
 }
 
+
 body {
-  /*overflow-y: hidden;*/
+  margin: 0;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
 }
 
 #humanit-shop {
   min-height: 100vh;
-  overflow-y: auto;
-  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-container {
   width: 100%;
   display: flex;
+  flex: 1;
   justify-content: center;
-  margin-bottom: 80px;
-
   .main {
     width: 60%;
 
