--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -2,11 +2,13 @@
 * @Author: Aleksiej Kuncewicz
 * @Date:   2021-08-11 10:09:23
 * @Last Modified by:   Aleksiej Kuncewicz
-* @Last Modified time: 2021-08-13 13:34:34
+* @Last Modified time: 2021-08-13 13:50:30
 */
 
 .header-container {
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: 1;
   display: flex;
   justify-content: space-around;
   width: 100%;
